--- a/BookStoreApp.API/appsettings.json
+++ b/BookStoreApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BookStoreAppDbConnection": "Server=localhost\\sqlexpress;Database=BookStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -18,7 +21,7 @@
       {
         "Name": "Seq",
         "Args": {
-          "serverUrl": "http://localhost:5341" 
+          "serverUrl": "http://localhost:5341"
         }
       }
     ]
